# Bear-Share

./: .gitignore  Cargo.toml  db.sqlite  readme.md  schema.sql
src/: main.rs  services.rs
src/repository/: file_repo.rs
src/routes/: download.rs  upload.rs
src/services/: download_service.rs  file_services.rs
tests/: test_1_localhost.md
