[package]
name = "bear_share"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.7", features = ["multipart"]}
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"